--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Sanna Kramsi - Blog",
   "short_name": "Blog",
+  "icons": [
   {
     "src": "/favicons/android-chrome-192x192.png",
     "sizes": "192x192",
