--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@astrojs/react": "^3.0.8",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.4",
+    "@fontsource/atkinson-hyperlegible": "^5.1.0",
     "@fontsource/average-sans": "^5.0.8",
     "@fontsource/lato": "^5.0.18",
     "@fontsource/rock-salt": "^5.0.18",
+    "@fontsource/satisfy": "^5.1.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.7",
